# accel-week1-challenge

./: Anchor.toml
programs/whitelist-transfer-hook/: Cargo.toml
programs/whitelist-transfer-hook/src/: lib.rs
programs/whitelist-transfer-hook/src/instructions/: deposit.rs  init_extra_account_meta.rs  init_vault.rs  mint_token.rs  mod.rs  transfer_hook.rs  whitelist_operations.rs  withdraw.rs
programs/whitelist-transfer-hook/src/state/: mod.rs  user.rs  vault.rs  whitelist.rs
programs/whitelist-transfer-hook/src/tests/: mod.rs
